# rust-lang-book

./: .gitignore  .gitmodules  Cargo.toml  README.md
ch01_02_hello_world/: Cargo.toml
ch02_00_guessing_game_tutorial/: Cargo.toml
ch03_01_variables_and_mutability/: Cargo.toml
ch03_02_data_types/: Cargo.toml
ch03_03_how_functions_work/: Cargo.toml
ch03_04_comments/: Cargo.toml
ch03_05_control_flow/: Cargo.toml
ch04_01_what_is_ownership/: Cargo.toml
ch04_02_references_and_borrowing/: Cargo.toml
ch04_03_slices/: Cargo.toml
ch05_01_defining_structs/: Cargo.toml
ch05_02_example_structs/: Cargo.toml
ch05_03_method_syntax/: Cargo.toml
ch06_01_defining_an_enum/: Cargo.toml
ch06_02_match/: Cargo.toml
ch06_03_if_let/: Cargo.toml
ch07_02_defining_modules_to_control_scope_and_privacy/: Cargo.toml
ch07_03_paths_for_referring_to_an_item_in_the_module_tree/: Cargo.toml
ch07_04_bringing_paths_into_scope_with_the_use_keyword/: Cargo.toml
ch07_05_separating_modules_into_different_files/: Cargo.toml
ch08_01_vectors/: Cargo.toml
ch08_02_strings/: Cargo.toml
ch08_03_hash_maps/: Cargo.toml
ch09_01_unrecoverable_errors_with_panic/: Cargo.toml
ch09_02_recoverable_errors_with_result/: Cargo.toml
ch09_03_to_panic_or_not_to_panic/: Cargo.toml
ch10_00_generics/: Cargo.toml
ch10_01_syntax/: Cargo.toml
ch10_02_traits/: Cargo.toml
ch10_03_lifetime_syntax/: Cargo.toml
ch11_01_writing_tests/: Cargo.toml
ch11_02_running_tests/: Cargo.toml
ch11_03_test_organization/: Cargo.toml
ch12_01_accepting_command_line_arguments/: Cargo.toml
ch12_02_reading_a_file/: Cargo.toml
ch12_03_improving_error_handling_and_modularity/: Cargo.toml
ch12_04_testing_the_librarys_functionality/: Cargo.toml
ch12_05_working_with_environment_variables/: Cargo.toml
ch12_06_writing_to_stderr_instead_of_stdout/: Cargo.toml
ch13_01_closures/: Cargo.toml
ch13_02_iterators/: Cargo.toml
ch13_03_improving_our_io_project/: Cargo.toml
ch13_04_performance/: Cargo.toml
ch14_01_release_profiles/: Cargo.toml
ch14_02_publishing_to_crates_io/: Cargo.toml
ch14_03_cargo_workspaces/: Cargo.toml
ch15_01_box/: Cargo.toml
ch15_02_deref/: Cargo.toml
ch15_03_drop/: Cargo.toml
ch15_04_rc/: Cargo.toml
ch15_05_interior_mutability/: Cargo.toml
ch15_06_reference_cycles/: Cargo.toml
ch16_01_threads/: Cargo.toml
ch16_02_message_passing/: Cargo.toml
ch16_03_shared_state/: Cargo.toml
ch16_04_extensible_concurrency_sync_and_send/: Cargo.toml
ch17_01_what_is_oo/: Cargo.toml
ch17_02_trait_objects/: Cargo.toml
ch17_03_oo_design_patterns/: Cargo.toml
ch18_01_all_the_places_for_patterns/: Cargo.toml
ch18_02_refutability/: Cargo.toml
ch18_03_pattern_syntax/: Cargo.toml
ch19_01_unsafe_rust/: Cargo.toml
(+95 files in other folders)
