[workspace]
members = [
    "ch01_02_hello_world",
    "ch02_00_guessing_game_tutorial",
    "ch03_01_variables_and_mutability",
    "ch03_02_data_types",
    "ch03_03_how_functions_work",
    "ch03_04_comments",
    "ch03_05_control_flow",
    "ch04_01_what_is_ownership",
    "ch04_02_references_and_borrowing",
    "ch04_03_slices",
    "ch05_01_defining_structs",
    "ch05_02_example_structs",
    "ch05_03_method_syntax",
    "ch06_01_defining_an_enum",
    "ch06_02_match",
]