[workspace]
members = [
    "ch01_02_hello_world",
    "ch02_00_guessing_game_tutorial",
    "ch03_01_variables_and_mutability",
    "ch03_02_data_types",
    "ch03_03_how_functions_work",
    "ch03_04_comments",
    "ch03_05_control_flow",
    "ch04_01_what_is_ownership",
    "ch04_02_references_and_borrowing",
    "ch04_03_slices",
    "ch05_01_defining_structs",
    "ch05_02_example_structs",
    "ch05_03_method_syntax",
    "ch06_01_defining_an_enum",
    "ch06_02_match",
    "ch06_03_if_let",
    "ch07_02_defining_modules_to_control_scope_and_privacy",
    "ch07_03_paths_for_referring_to_an_item_in_the_module_tree",
    "ch07_04_bringing_paths_into_scope_with_the_use_keyword",
    "ch07_05_separating_modules_into_different_files",
    "ch08_01_vectors",
    "ch08_02_strings",
    "ch08_03_hash_maps",
    "ch09_01_unrecoverable_errors_with_panic",
    "ch09_02_recoverable_errors_with_result",
    "ch09_03_to_panic_or_not_to_panic",
    "ch10_00_generics",
    "ch10_01_syntax",
    "ch10_02_traits",
    "ch10_03_lifetime_syntax",
    "ch11_01_writing_tests",
    "ch11_02_running_tests",
    "ch11_03_test_organization",
    "ch12_01_accepting_command_line_arguments",
    "ch12_02_reading_a_file",
    "ch12_03_improving_error_handling_and_modularity",
    "ch12_04_testing_the_librarys_functionality",
    "ch12_05_working_with_environment_variables",
    "ch12_06_writing_to_stderr_instead_of_stdout",
    "ch13_01_closures",
    "ch13_02_iterators",
    "ch13_03_improving_our_io_project",
]